--- a/home.html
+++ b/home.html
@@ -6,16 +6,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="form.html">From</a></li>
+                <li><a href="form.html">From
+                        <ul class="link">
+                            <li><a href="">link-1</a></li>
+                            <li><a href="">link-2</a></li>
+                            <li><a href="">link-3</a></li>
+                            <li><a href="">link-4</a></li>
+                        </ul>
+                    </a></li>
+                <li><a href="home.html">Home </a></li>
+                <li><a href="table.html">Table
+                        <ul class="link">
+                            <li><a href="">link-1</a></li>
+                            <li><a href="">link-2</a></li>
+                            <li><a href="">link-3</a></li>
+                            <li><a href="">link-4</a></li>
+                        </ul>
+                    </a></li>
+                <li><a href="semantic.html">Semantic </a></li>
+                <li><a href="audio-video.html">Audio-Video
+                        <ul class="link">
+                            <li><a href="">limk-1</a></li>
+                            <li><a href="">limk-2</a></li>
+                            <li><a href="">limk-3</a></li>
+                            <li><a href="">limk-4</a></li>
+                        </ul>
+                    </a></li>
             </ul>
         </nav>
     </header>
+    <h1>Welcome to my Home</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam adipisci mollitia fuga perferendis,
+        suscipit sed nesciunt sapiente exercitationem reiciendis at provident alias natus quas quod commodi nihil
+        voluptates esse.</p>
 </body>
 
 </html>
