--- a/audio-video.html
+++ b/audio-video.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <h1>Exploring HTML5</h1>
+    <audio src="media/audio/Goat.mp3" controls></audio>
+    <video src="media/video/demo.mp4" controls width="300"></video><br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/7roE88D2FQs" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 
 </body>
 
