--- a/form.html
+++ b/form.html
@@ -9,7 +9,52 @@
 </head>
 
 <body>
+    <h1>Jamaler ma special tsc pitha exp</h1>
+    <form action="">
+        <p>Name<input type="text" name="" placeholder="Enter your name" id=""><br></p>
 
+        <p>Email <input type="text" name="" placeholder="Enter your email" id=""></p>
+        <fieldset>
+            <legend>Select your pitha</legend>
+
+            <p>
+                <label for="citoy">
+                    <input type="radio" name="pitha" id="citoy">citoy
+                </label>
+            </p>
+            <p>
+                <label for="vapa">
+                    <input type="radio" name="pitha" id="vapa">vapa
+                </label>
+            </p>
+            <p>
+                <label for="tel er pitha">
+                    <input type="radio" name="pitha" id="tel er pitha">tel er
+                </label>
+            </p>
+        </fieldset>
+        <fieldset>
+            <legend>Select your borta</legend>
+            <p>
+                <label for="sorisa">
+                    <input type="checkbox" name="borta" id="sorisa">soris
+                </label>
+            <p>
+                <label for="shutki">
+                    <input type="checkbox" name="borta" id="shutki">shutki
+                </label>
+            <p>
+                <label for="begun">
+                    <input type="checkbox" name="borta" id="begun">begun
+                </label>
+        </fieldset>
+        <p>Special Instruction
+            <br>
+            <textarea name="Instruction" id="" cols="30" rows="10"></textarea>
+        </p>
+        <button id="submit">submit</button>
+        <button id="recet">recet</button>
+    </form>
 </body>
 
 </html>
