--- a/home.html
+++ b/home.html
@@ -20,25 +20,34 @@
                             <li><a href="">link-3</a></li>
                             <li><a href="">link-4</a></li>
                         </ul>
-                    </a></li>
-                <li><a href="home.html">Home </a></li>
-                <li><a href="table.html">Table
+                    </a>
+                </li>
+                <li>
+                    <a href="home.html">Home </a>
+                </li>
+                <li>
+                    <a href="table.html">Table
                         <ul class="link">
                             <li><a href="">link-1</a></li>
                             <li><a href="">link-2</a></li>
                             <li><a href="">link-3</a></li>
                             <li><a href="">link-4</a></li>
                         </ul>
-                    </a></li>
-                <li><a href="semantic.html">Semantic </a></li>
-                <li><a href="audio-video.html">Audio-Video
+                    </a>
+                </li>
+                <li>
+                    <a href="semantic.html">Semantic </a>
+                </li>
+                <li>
+                    <a href="audio-video.html">Audio-Video
                         <ul class="link">
                             <li><a href="">limk-1</a></li>
                             <li><a href="">limk-2</a></li>
                             <li><a href="">limk-3</a></li>
                             <li><a href="">limk-4</a></li>
                         </ul>
-                    </a></li>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
