--- a/table.html
+++ b/table.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/nav.css">
     <style>
         table {
             border-collapse: collapse;
@@ -20,6 +21,48 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="form.html">From
+                        <ul class="link">
+                            <li><a href="">link-1</a></li>
+                            <li><a href="">link-2</a></li>
+                            <li><a href="">link-3</a></li>
+                            <li><a href="">link-4</a></li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="home.html">Home </a>
+                </li>
+                <li>
+                    <a href="table.html">Table
+                        <ul class="link">
+                            <li><a href="">link-1</a></li>
+                            <li><a href="">link-2</a></li>
+                            <li><a href="">link-3</a></li>
+                            <li><a href="">link-4</a></li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="semantic.html">Semantic </a>
+                </li>
+                <li>
+                    <a href="audio-video.html">Audio-Video
+                        <ul class="link">
+                            <li><a href="">limk-1</a></li>
+                            <li><a href="">limk-2</a></li>
+                            <li><a href="">limk-3</a></li>
+                            <li><a href="">limk-4</a></li>
+                        </ul>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Welcome to my Home</h1>
     <table>
         <thead>
             <tr>
