--- a/audio-video.html
+++ b/audio-video.html
@@ -6,9 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="form.html">From
+                        <ul class="link">
+                            <li><a href="">link-1</a></li>
+                            <li><a href="">link-2</a></li>
+                            <li><a href="">link-3</a></li>
+                            <li><a href="">link-4</a></li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="home.html">Home </a>
+                </li>
+                <li>
+                    <a href="table.html">Table
+                        <ul class="link">
+                            <li><a href="">link-1</a></li>
+                            <li><a href="">link-2</a></li>
+                            <li><a href="">link-3</a></li>
+                            <li><a href="">link-4</a></li>
+                        </ul>
+                    </a>
+                </li>
+                <li>
+                    <a href="semantic.html">Semantic </a>
+                </li>
+                <li>
+                    <a href="audio-video.html">Audio-Video
+                        <ul class="link">
+                            <li><a href="">limk-1</a></li>
+                            <li><a href="">limk-2</a></li>
+                            <li><a href="">limk-3</a></li>
+                            <li><a href="">limk-4</a></li>
+                        </ul>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Welcome to my Audio-Video</h1>
     <h1>Exploring HTML5</h1>
     <audio src="media/audio/Goat.mp3" controls></audio>
     <video src="media/video/demo.mp4" controls width="300"></video><br>
